--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^6.15.0"
+    "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.7",
+    "@types/uuid": "^9.0.1",
     "esbuild-register": "^3.4.2",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
