--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@
 
 DATABASE_URL="postgresql://postgres:password@localhost:54321/mtaa?schema=public"
 PORT="3000"
+JWT_ACCESS_SECRET=secret
+JWT_REFRESH_SECRET=ofSecret
