--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "swagger-autogen": "node src/swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +38,7 @@
     "esbuild-register": "^3.4.2",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
+    "swagger-autogen": "^2.23.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "typescript": "^5.0.2"
