--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "swagger-autogen": "node src/swagger.ts"
+    "swagger-autogen": "node swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "@prisma/client": "^4.13.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/ws": "^8.5.4",
+    "@types/swagger-ui": "^3.52.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
