--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/ws": "^8.5.4",
     "@types/swagger-ui": "^3.52.0",
+    "@types/ws": "^8.5.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -45,6 +45,7 @@
     "swagger-autogen": "^2.23.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
 }
